<resources>
    <string name="app_name">DnDApp</string>
    <string name="desc_firebase_lockup">logo and name</string>
    <string name="emailpassword_status_fmt">Email User: %1$s</string>
    <string name="emailpassword_title_text">Log In / Register</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="create_account">Create Account</string>
    <string name="enter_room">Enter Room</string>
    <string name="create_room">Create Room</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="character_level">Lvl </string>
    <string name="character_experience">Exp </string>
    <string name="character_hitpoints"> </string>
    <string name="character_race">Race</string>
    <string name="character_class">Class</string>
    <string name="character_alignment">Alignment</string>
    <string name="character_backgrounds">Background</string>
    <string name="character_skills">Proficiency Skills</string>
    <string name="character_strength">Strength</string>
    <string name="character_dexterity">Dexterity</string>
    <string name="character_constitution">Constitution</string>
    <string name="character_intelligence">Intelligence</string>
    <string name="character_wisdom">Wisdom</string>
    <string name="character_charisma">Charisma</string>
    <string name="character_spells">Spells</string>
    <string name="character_hitpoints_now">%1$d / %2$d</string>
    <string name="room_id">Room ID</string>
    <string name="room_wait">Waiting to join&#8230;</string>
</resources>
