<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/extra_stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/detail_accent_pane_background"
        android:paddingBottom="@dimen/forecast_detail_vertical_padding"
        android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
        android:paddingRight="@dimen/forecast_detail_horizontal_padding"
        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
        android:paddingTop="@dimen/forecast_detail_vertical_padding">

        <!-- This guideline divides the layout into a left and right half and is used for alignment -->
        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <!-- Race label -->
        <TextView
            android:id="@+id/race_label"
            style="@style/DetailLabel"
            android:layout_height="21dp"
            android:text="@string/character_race"
            app:layout_constraintBottom_toTopOf="@+id/alignment_label"
            app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Character Race -->
        <TextView
            android:id="@+id/char_race"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/race_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="38%" />

        <!-- Alignment label -->
        <TextView
            android:id="@+id/alignment_label"
            style="@style/DetailLabel"
            android:text="@string/character_class"
            app:layout_constraintBottom_toTopOf="@+id/background_label"
            app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/race_label" />

        <!-- Alignment Class -->
        <TextView
            android:id="@+id/char_alignment"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/alignment_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Neutral Neutral" />

        <!-- Background label -->
        <TextView
            android:id="@+id/background_label"
            style="@style/DetailLabel"
            android:text="@string/character_backgrounds"
            app:layout_constraintBottom_toTopOf="@+id/proficiency_label"
            app:layout_constraintEnd_toStartOf="@+id/char_background"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alignment_label" />

        <!-- Background Class -->
        <TextView
            android:id="@+id/char_background"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/background_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Acolyte" />


        <!-- Proficiency label -->
        <TextView
            android:id="@+id/proficiency_label"
            style="@style/DetailLabel"
            android:text="@string/character_skills"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/char_proficiency"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_label" />

        <!-- Proficiency Alignment -->
        <TextView
            android:id="@+id/char_proficiency"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/proficiency_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Neutral Neutral" />

    </android.support.constraint.ConstraintLayout>

</layout>